hphp/test/slow/default_arguments_lambda.php.expectf

Fatal error: `await` cannot be used in a parameter default value in %s/default_arguments_lambda.php on line 18
